index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

*{
    font-family: 'roboto', 'Times New Roman';
    /*border: 1px solid red;*/
}

body{
    box-sizing: border-box;
    display:flex;
    flex-direction: column;
    margin:0px;
}

.header{
    display: flex;
    background-color: #1F2937;
    justify-content: space-between;
    align-items: center;
    padding: 0px 60px 0px 60px;
}

.header-logo{
    font-size: 24px;
    color: #F9FAF8;
}

ul{
    display: flex;
    gap: 25px;
    list-style: none;
    padding:0px;
}

ul,button,.main-description-text{
    font-size: 18px;
    color: #E5E7EB;
}

#fish{
    width:auto;
    height:auto;
}

.main{
    background-color: #1F2937;
    display:flex;
    justify-content: space-between;
    padding: 60px;
    gap: 60px;
    
}

.main-text{
    display:flex;
    flex-flow: column wrap;
    justify-content: space-between;
    gap: 10px;
}

.main-hero-text{
    font-weight: 900;
    font-size: 48px;
    color: #F9FAF8;
}

.main-description-text{
   max-width: 60%;
}

.main-text button{
    background-color: #3882F6;
    border-width: 0px;
    border-radius: 8px;
    max-width: fit-content;
    padding: 5px 20px 5px 20px;
}

.gallery{
    display:flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    gap: 15px;
    padding:30px;
}

.gallery-text{
    color: #1f2937;
    font-weight: 900;
    font-size: 36px;
}

.gallery-container{
    display:flex;
    gap: 80px;
}

.image{
    display: flex;
    flex-direction:column;
    justify-content: center;
    align-items: center;
    text-align: center;
    max-width: 200px;
}

img{
    border: 2px solid #3882F6;
    border-radius: 8px;
    width: 100px;
    height: 100px;
}

.quote{
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    padding: 140px;
}

.quote-text{
    color: #1F2937;
    font-style: italic;
    font-size: 36px;
    align-self: center;
    max-width: 600px;
}

.signature{
    align-self: flex-end; 
}

.sign-up{
    display:flex;
    justify-content: center;
    align-items: center;
    padding: 80px;
}

.sign-up-box{
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: #3882F6;
    border-radius: 8px;
    padding: 40px;
    gap:25px;
    max-width: 1,000px;
}

.bold-text{
    color: #F9FAF8;
    font-weight: 900;
    font-size: 18px;
}

.instruction{
    color: #E5E7EB;
    font-size: 16px;
}

.sign-up-box button{
    border: 2px solid white;
    border-radius: 8px;
    padding: 5px 20px 5px 20px;
    margin-left: 40px;
    background-color: #3882F6;
}

.footer{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 30px;
    background-color: #1F2937;
    color: #E5E7EB;
    margin: 0px;
    font-size: 10px;
}

/* tweak images to prevent overflow when shrinking 
and position signature under quote

